Alignment Fix in Templates

--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -15,4 +15,6 @@
 
 /* #endregion */
 
-
+body{
+    background:#f3fffc;
+    }
